--- a/heart.html
+++ b/heart.html
@@ -26,11 +26,17 @@
             <div id="code">
                 <span class="say">* 欢迎来到我的爱心课堂 *</span><br>
                 <span class="say"> </span><br>
-                <span class="say">· 我是教师罗晋韵！</span><br>
+                <span class="say">感谢您的爱心，助力地球环保活动。</span><br>
                 <span class="say"> </span><br>
+                <span >
+                    <img src="./earth.jpg" width="400" height="400" id="img"/>
+                </span>
             </div>
         </div>
-        <canvas id="canvas" width="1100" height="680"></canvas>
+
+        <canvas id="canvas" width="1100" height="680">
+
+        </canvas>
     </div>
 
 </div>
@@ -197,6 +203,6 @@
         runAsync().start();
     })();
 </script>
-<iframe src = "./给你们.mp3" allow = "autoplay" hidden /> //自己修改音乐位置
+<iframe src = "./earth.mp3"  allow = "autoplay"  hidden loop/>
 </body>
 </html>
