--- a/heart.html
+++ b/heart.html
@@ -203,6 +203,9 @@
         runAsync().start();
     })();
 </script>
-<iframe src = "./earth.mp3"  allow = "autoplay"  hidden loop/>
+<audio autoplay="autoplay" loop="loop" controls="controls">
+    <source src="./earth.mp3"
+            type="audio/mpeg">
+</audio>
 </body>
 </html>
